tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_in_return_type_pure.objc3
// Negative fixture: declaration qualifiers are not valid function return type annotations.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierInReturnTypePure;

fn add(lhs: i32, rhs: i32) -> pure;

fn main() -> i32 {
  return 0;
}
